Java 21 is not supported by Github mabven task